--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,11 @@
     <main>
         <div class="container">
             <div class="dashboard-container">
-                <h2>Recent Scores</h2>
-                <button class="btn">Refresh</button>
+                <div class="dashboard-heading">
+                    <h2>Recent Scores</h2>
+                    <button class="btn">Refresh</button>
+                </div>
+           
                 <div class="list-container">
                     <ul class="list">
                         <li class="list-item">
@@ -38,11 +41,5 @@
             </div>
         </div>
     </main>
-    <footer>
-        <p>
-            Lorem ipsum dolor sit amet.
-        </p>
-    </footer>
-
 </body>
 </html>
