--- a/src/index.html
+++ b/src/index.html
@@ -19,23 +19,14 @@
            
                 <div class="list-container">
                     <ul class="list">
-                        <li class="list-item">
-                            Name:100
-                        </li>
-                        <li class="list-item">
-                            Name:100
-                        </li>
-                        <li class="list-item">
-                            Name:100
-                        </li>
                     </ul>
                 </div>
             </div>
             <div class="form-container">
                 <h2>Add your score</h2>
                 <form action="">
-                    <input type="text" placeholder="Your name" class="form-input" required>
-                    <input type="text" placeholder="Your score" class="form-input" required>
+                    <input type="text" placeholder="Your name" class="form-input" required name="name">
+                    <input type="text" placeholder="Your score" class="form-input" required name="score">
                     <input type="submit" class="submit">
                 </form>
             </div>
